# finddupimgs

./: README.md  package.json  pnpm-lock.yaml  prettier.config.cjs  tailwind.config.cjs  tsconfig.json
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: find_duplicates.py
src-tauri/src/: main.rs
src/lib/: Image.svelte  ImageDialog.svelte  ImageGroup.svelte
