[package]
name = "finddupimgs"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "protocol-asset", "shell-open", "shell-execute", "path-all", "dialog-open", "dialog-message", "dialog-confirm", "dialog-ask"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
infer = "0.15.0"
image = "0.24.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
